# NeuroStream

./: .env.example  .gitignore  FINALDOCUMENT.txt  SERVICES_IO.md  b2-cors-rules.json  convert.py  docker-compose.yml  drawiocode.txt  go.sum  manual_frontend_upload_test.sh  overleaf.txt  pdf_output.txt  plan.md  render.yaml  run_ms4_ms5_test.sh
config/: config.go
internal/callback/: ms4_notifier.go
internal/models/: job.go
internal/s3/: downloader.go
ms1/: .env  .env.example  Dockerfile  MS1_README.md  README.md  docker-compose.local.yml  docker-compose.yml  go.mod
ms2/: .env.example  README.md  docker-compose.yml  pyproject.toml
ms3/: .env.example  README.md  docker-compose.yml  pyproject.toml
ms4/: .gitignore  README.md  docker-compose.yml
ms4/backend/: .env.example  README.md  pyproject.toml
ms4/backend/app/: config.py  constants.py  database.py  deps.py  main.py  models.py  ms5_client.py  queues.py  responses.py  schemas.py  security.py  seed.py  serializers.py  storage.py  utils.py
ms4/backend/app/routers/: __init__.py  auth.py  billing.py  helpers.py  internal.py  upload.py  videos.py
ms4/backend/prisma/: schema.prisma
ms5-analytics/: .dockerignore  .env.example  .gitignore  Dockerfile  MS5_README.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  requirements.txt  seed_events.py
ms6/: .env.example  Dockerfile  PRD.md  README.md  pom.xml
ms7/: .env.example  PRD.md  README.md  requirements.txt  run.py
scratch/: clean_doc.py  clean_doc_v2.py  ec2_update.py  insert_ms_list.py  update_methodology.py
(+141 files in other folders)
